refactor ConsoleRunner for improved command handling and add help command; enhance OperationResult with message handling